# drf-versioning

./: Makefile  README.md  pyproject.toml  shell.nix
.github/workflows/: test.yaml
docs/: diagrams.monopic
src/: conftest.py
src/api/: config.py  middleware.py  middlewares.py  renderer.py  renderers.py  test_transformations.py  test_versions.py  transformations.py  utils.py  versions.py
src/api/tests/: conftest.py  test_transformations.py  test_versions.py
src/apps/catalogue/: admin.py  apps.py  models.py  serializers.py  transformations.py  urls.py  views.py
src/apps/catalogue/migrations/: 0001_initial.py  0002_rename_name_product_title.py
src/shop/: settings.py  urls.py
