[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Nav Aulakh <nav@navaulakh.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-rest-framework = "^0.1.0"
drf-spectacular = "^0.22.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
ipython = "^8.3.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
